minikube/base/infra/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lumenlink-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: lumenlink.com  # main application
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  - host: api.lumenlink.com  # separate subdomain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-service
            port:
              number: 5000
  - host: pgadmin.lumenlink.com  # separate subdomain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgadmin-service
            port:
              number: 5433
  - host: mongo.lumenlink.com  # separate subdomain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express-service
            port:
              number: 8081
  - host: keycloak.lumenlink.com  # separate subdomain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              number: 8070
